tests/compile_fail/unsupoted_meta_data_list.stderr
error: expected `=`
 --> $DIR/unsupoted_meta_data_list.rs:5:36
  |
5 |     #[def(field_num = 100, def_type("int32", "int32"))]
  |                                    ^
